<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom4"
    tools:context=".AboutUs"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back_ios_logo"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_rockford_sans"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/klasifikasi_buah_segar_dan_busuk"
            android:textColor="@color/custom3"
            android:textSize="22sp" />

        <View
            android:layout_width="400dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_rockford_sans"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:maxLines="10"
            android:minLines="5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textMultiLine"
            tools:ignore="TextViewEdits" />

        <View
            android:layout_width="400dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_rockford_sans"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/dibuat_oleh_informatika_ist_akprind_yogyakarta"
            android:textColor="@color/custom3"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>