<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/custom4"
    tools:context=".MenuLayout">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bt_exit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/exit_icon"
            android:layout_gravity="end" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/font_rockford_sans"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@color/custom3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_rockford_sans"
                android:gravity="left"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/real_time_classification"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/bt_realtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/font_rockford_sans"
                android:padding="10dp"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="-50dp"
                android:layout_marginBottom="-10dp"
                android:contentDescription="TODO"
                android:src="@drawable/realtime_icon"
                tools:ignore="ContentDescription,HardcodedText" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@color/custom6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_rockford_sans"
                android:gravity="right"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/classifaction_from_storage"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/bt_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/font_rockford_sans"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-30dp"
                android:contentDescription="TODO"
                android:src="@drawable/folder_icon"
                tools:ignore="ContentDescription,HardcodedText" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@color/custom7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_rockford_sans"
                android:gravity="left"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/bt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:fontFamily="@font/font_rockford_sans"
                android:padding="10dp"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="-20dp"
                android:contentDescription="TODO"
                android:src="@drawable/about_us_icon"
                tools:ignore="ContentDescription,HardcodedText" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>